# EDGAR_Summary

./: .gitignore  Create 10-K Corpus.ipynb  LICENSE  README.md  app.py  config.toml  pyproject.toml  requirements.txt
.streamlit/: __init__.py  config.toml
pages/: summary.py
sample_data/2015/: 1373853.0001393905-21-000216.txt
sample_data/2016/: 12208.0000012208-17-000012.txt  1415404.0001415404-17-000010.txt  1445305.0001445305-17-000008.txt  1499832.0001499832-17-000011.txt  912061.0000912061-17-000012.txt
sample_data/2017/: 1301787.0001301787-18-000033.txt  1445305.0001445305-18-000054.txt  1499832.0001628280-18-003129.txt  912061.0000912061-18-000015.txt  96536.0000096536-17-000031.txt
sample_data/2018/: 1609550.0001609550-19-000013.txt  355811.0000355811-19-000006.txt  856982.0000856982-19-000016.txt  912061.0000912061-19-000029.txt  96536.0000096536-18-000022.txt
sample_data/2019/: 1022079.0001022079-20-000017.txt  1222333.0001193125-19-299966.txt  1615219.0001615219-20-000014.txt  355811.0000355811-20-000007.txt  856982.0000856982-20-000011.txt
sample_data/2020/: 1137883.0001104659-21-011928.txt  1222333.0001193125-20-301561.txt  1505512.0001628280-21-004294.txt  1575793.0001564590-21-015121.txt  1603978.0001603978-21-000015.txt
sample_data/2021/: 1222333.0001193125-21-340496.txt  1554859.0001554859-22-000008.txt  1603978.0001603978-22-000011.txt  1644963.0001410578-22-000516.txt  717605.0000950170-22-000961.txt
sample_data/2022/: 1282631.0001558370-23-002384.txt  1835972.0001140361-23-015404.txt  1837344.0001213900-23-043558.txt  (+2 more)
(+5 files in other folders)
