[project]
name = "EDGAR Summary"
description = "Summary tool the [Edgar](https://github.com/TextCorpusLabs/Edgar) corpus"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Sokpheanal Huynh"},
  {name = "Mark Newman", email = "mark@trinetteandmark.com" }
]
maintainers = [
  {name = "Sokpheanal Huynh"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic"
]

requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.32.2,<2.0.0",
  "chardet>=5.2.0,<6.0.0",
  "openai>=1.14.2,<2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/sokpheanal/EDGAR_Summary"
"Bug Reports" = "https://github.com/sokpheanal/EDGAR_Summary/issues"
"Source" = "https://github.com/sokpheanal/EDGAR_Summary"
